<resources>
    <string name="app_name">DarCourier</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="restore">Забыли свои данные для входа?</string>
    <string name="signin">Войти</string>
    <string name="password">Пароль</string>
    <string name="email">E-mail</string>
    <string name="enter">ВХОД В ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="restore_password"><u>Восстановить пароль</u></string>
</resources>
