<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kz.darlogistics.courier.auth.AuthActivity"
    android:background="@drawable/login_bg">
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp">
        <TextView
            android:id="@+id/title_id_dar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DAR"
            android:textColor="#F3114A"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/title_id_logistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logistics"
            android:textColor="#9B9B9B"
            android:textSize="50sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/title_id_dar" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/sign_in_text_view"
        app:layout_constraintTop_toBottomOf="@id/titleLogin"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="#fff"/>
    <EditText
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="#fff"
        android:hint="@string/email"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text_view" />
    <android.support.design.widget.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:hintEnabled="false"
        app:passwordToggleContentDescription="fd"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordInputText"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="#fff"
            android:padding="8dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_view_login_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="#EE194D"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        />
    <TextView
        android:layout_marginTop="32dp"
        android:id="@+id/login_view_restore_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/login_view_login_button"/>
    <Button
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:id="@+id/login_view_restore_password_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_password"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/login_view_restore_password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
